--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "php-server-manager": "^1.3.3"
   },
   "scripts": {
-    "start": "electron main.js",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/icon.png --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Capture FB\"",
-    "package-linux": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/icon.png --prune=true --out=release-builds"
+    "start": "electron .",
+    "dist": "electron-builder"
   },
   "build": {
     "appId": "com.fbconnect.app",
@@ -25,6 +23,6 @@
   },
   "devDependencies": {
     "electron": "^19.0.1",
-    "electron-packager": "^15.5.1"
+    "electron-builder": "^23.0.3"
   }
 }
